90% done need polish

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
       crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|BenchNine|Cinzel|Meddon" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Fascinate+Inline|Oswald" rel="stylesheet">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <title>React Reading List</title>
 </head>
